@startuml

title __GUI's Class Diagram__\n

  namespace ui {
    namespace gui {
      class ui.gui.DragLayout {
          - usePreferredSize : boolean
          + DragLayout()
          + DragLayout()
          + addLayoutComponent()
          + isUsePreferredSize()
          + layoutContainer()
          + minimumLayoutSize()
          + preferredLayoutSize()
          + removeLayoutComponent()
          + setUsePreferredSize()
          + toString()
          - getActualSize()
          - getLayoutSize()
      }
    }
  }
  

  namespace ui {
    namespace gui {
      class ui.gui.GDragListener {
          + GDragListener()
          + mouseDragged()
      }
    }
  }
  

  namespace ui {
    namespace gui {
      class ui.gui.GMouseAdapter {
          + GMouseAdapter()
          + mousePressed()
          + mouseReleased()
      }
    }
  }
  

  ui.gui.DragLayout .up.|> java.awt.LayoutManager
  ui.gui.DragLayout .up.|> java.io.Serializable
  ui.gui.GDragListener -up-|> java.awt.event.MouseMotionAdapter
  ui.gui.GDragListener o-- ui.GUInterface : guInterface
  ui.gui.GMouseAdapter -up-|> java.awt.event.MouseAdapter
  ui.gui.GMouseAdapter o-- ui.GUInterface : guInterface


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
